--- a/pop-test/src/site.css
+++ b/pop-test/src/site.css
@@ -14,6 +14,7 @@
     src: url('/fonts/SolanoGothicMVBPro-Bd.otf') format('truetype');
 }
 
+
 /* COLORES */
 :root {
     --red: #F00;
@@ -135,8 +136,8 @@ body {
     min-height: 32px;
     min-width: 226px;
     display: flex;
-    justify-content: center;
-    align-items: start;
+    justify-content: normal;
+    align-items: center;
 }
 
 .section .container .information .button {
