--- a/pop-test/src/components/Resultado/Resultado.css
+++ b/pop-test/src/components/Resultado/Resultado.css
@@ -1,5 +1,3 @@
-
-
 .section {
     min-height: 352px;
 }
@@ -28,18 +26,20 @@
 .section .containerF .information .subtitle {
     min-width: 273px;
     min-height: 48px;
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
     font-size: 24px;
     line-height: 24px;
     font-weight: bold;
     margin-bottom: 25px;
     margin-top: 20px;
+    color: #333333;
 }
 
 .section .containerF .information .results {
 
     display: flex;
-    max-width: 254px;
+    width: 75%; 
+    min-width: 254px;
     justify-content: space-between;
 }
 
@@ -53,7 +53,7 @@
     font-size: 12px;
     line-height: 12px;
     font-weight: bold;
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
     margin-bottom: 5px;
     color: var(--gray);
 }
@@ -64,7 +64,7 @@
     font-weight: bold;
     font-size: 20px;
     line-height: 20px;
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
     color: var(--red);
 }
 
@@ -84,7 +84,7 @@
     min-height: 12px;
     font-size: 12px;
     line-height: 12px;
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
     margin-bottom: 5px;
     font-weight: bold;
     color: var(--gray);
@@ -97,7 +97,7 @@
     font-weight: bold;
     font-size: 20px;
     line-height: 12px;
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
 }
 
 .section .containerF .information .info {
@@ -107,7 +107,7 @@
     font-size: 16px;
     line-height: 16px;
     color: var(--gray);
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
     margin-top: 25px;
 }
 
@@ -117,7 +117,7 @@
     background-color: var(--red);
     padding: 12px 10px;
     color: var(--white);
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,8 +150,11 @@
         margin-top: 24px;
     }
 
-    .section .containerF .information .buttonF {
-        margin-top: 0;
+
+
+    .section .containerF .information .results {
+
+        min-width: 80%;
     }
 
     .section .containerF .information .results .resultN {
