--- a/pop-test/src/site.css
+++ b/pop-test/src/site.css
@@ -10,8 +10,19 @@
 }
 
 @font-face {
+    font-family: "Solano Gothic Pro MVB";
+    src: url('/fonts/SolanoGothicMVBPro-Bd.otf') format('opentype')
+}
+
+
+@font-face {
     font-family: "Zizou Slab";
-    src: url('/fonts/SolanoGothicMVBPro-Bd.otf') format('truetype');
+    src: url('/fonts/Zizou\ Slab-Regular.otf') format('truetype');
+}
+
+@font-face {
+    font-family: "Zizou Slab Bold";
+    src: url('/fonts/Zizou\ Slab-Bold.otf') format('truetype');
 }
 
 
@@ -20,6 +31,7 @@
     --red: #F00;
     --white: #FFF;
     --black: #000;
+    --lightblack: #5F5F5F;
     --sky: #E6F5F0;
     --sky2: #9DE7D6;
     --skyblue: #80b2ff;
@@ -43,6 +55,9 @@ body {
     min-height: 100%;
     margin: 0;
     font-family: sans-serif;
+}
+a{
+    text-decoration: none;
 }
 
 .section {
@@ -104,6 +119,7 @@ body {
     font-size: 16px;
     line-height: 16.14px;
     color: var(--gray);
+    font-weight: normal;
 }
 
 .section .container .information .data {
