--- a/Landing/public/css/site.css
+++ b/Landing/public/css/site.css
@@ -1,4 +1,5 @@
 /* FONTS */
+
 @font-face {
     font-family: "Public Sans";
     src: url('../fonts/PublicSans-Regular.ttf') format('truetype');
@@ -45,7 +46,12 @@ body {
     min-width: 100%;
     min-height: 100%;
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Public Sans";
+}
+
+a{
+    all: unset;
+    cursor: pointer;
 }
 
 .button {
@@ -149,7 +155,7 @@ body {
 
 .formulario {
     background-color: var(--white);
-    width: 90%;
+    width: 100%;
     opacity: 0.4;
     min-height: 612px;
     min-width: 324px;
@@ -190,6 +196,7 @@ body {
     min-width: 276px;
     width: 80%;
     margin: 0 auto;
+    
 }
 
 .section2 .content .info .title {
@@ -373,6 +380,8 @@ body {
 
 .section3 .content .info .cards .card .textd span {
     color: var(--red);
+    font-weight: bold;
+
 }
 
 .section3 .content .info .button {
@@ -383,11 +392,11 @@ body {
 }
 
 .section3 .content .info .button .edgeb {
-    min-width: 276px;
-    min-height: 44px;
     position: absolute;
     top: 4;
     left: 4;
+    min-width: 276px;
+    min-height: 44px;
     border: 1px solid var(--red);
     z-index: 1;
     width: 100%;
@@ -573,16 +582,18 @@ body {
 
     .section2 .content {
         min-height: 400px;
-        max-height: 400px;
+        max-height: 500px;
         display: flex;
         align-items: center;
         margin-left: 30px;
         width: 100%;
+        margin-bottom: 16px;
     }
 
     .section2 .content .info {
         max-width: 470px;
         margin: 0;
+        margin-top: 80px;
     }
 
 
@@ -596,7 +607,7 @@ body {
     .section2 .content .girl {
         width: 80%;
         margin: 0 auto;
-        max-width: 380px;
+        max-width: 400px;
         min-height: 400px;
     }
 
@@ -672,7 +683,7 @@ body {
     }
 
     .section3 .content .info .button {
-        margin-top: 15px;
+        margin-top: 30px;
         width: 50%;
         min-height: 44px;
     }
