--- a/pop-test/src/components/Pregunta/Pregunta.css
+++ b/pop-test/src/components/Pregunta/Pregunta.css
@@ -75,7 +75,7 @@
 }
 
 .sectionq .containerq .question .box .contentq .infoq {
-    font-family: "Zizou Slab";
+    font-family: "Zizou Slab Bold";
     font-weight: bold;
     font-size: 20px;
     color: var(--gray);
@@ -85,6 +85,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-top: 20px;
 }
 
 
@@ -116,6 +117,7 @@
     flex-direction: column;
     gap: 10px;
     min-height: 281px;
+    margin-bottom: 10px;
 }
 
 .options .option-content {
@@ -153,6 +155,7 @@
     align-items: center;
     justify-content: center;
     line-height: 16px;
+    cursor: pointer;
 }
 
 
